--- a/css/style.css
+++ b/css/style.css
@@ -42,13 +42,19 @@
 }
 
 
+
+
 /* ------------------------------------------------------------------------------------------------------------------navbar */
 
 
 
+body {
+  background-color: hsl(0, 0%, 98%)
+}
 
 
 
+/* ------------------------------------------------------------------------------------------------------------Latest articles */
 
 
 
